--- a/Free-Laptops-2025-SA.html
+++ b/Free-Laptops-2025-SA.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Register Now" />
     <meta property="og:url" content="http://support-laptops.cn.lk" />
     <meta property="og:site_name" content="STUDENTS LAPTOPS SUPPORT" />
-    <meta property="og:image" content="https://i.ibb.co/v45NHn3d/rsh.jpg"/>
+    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEib3Jrpm03639oCRHayreh9jkQhZ-macROUeSEzuER-bAgia28nrG8MSZxyTYj97waYdaej6xuBS1alT1ARy8EsHU76DTxc6yOU7DjSON8w48nw_QjAdQPiMUejBn_l3YLuDFAKwgZqUjmdl4IN0NZ3kvx3ekYbUdAOvFqJmM2hgNzp3BGyqAi7PC1B4d8/s1080/351759385_568657572095663_258578715634711343_n.jpeg"/>
 
 <!-- CSS/LESS -->
 <!--
@@ -37,7 +37,7 @@
 
     <header>
     <div class="h_logo">
-        <img src="tp25.jpg">
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEib3Jrpm03639oCRHayreh9jkQhZ-macROUeSEzuER-bAgia28nrG8MSZxyTYj97waYdaej6xuBS1alT1ARy8EsHU76DTxc6yOU7DjSON8w48nw_QjAdQPiMUejBn_l3YLuDFAKwgZqUjmdl4IN0NZ3kvx3ekYbUdAOvFqJmM2hgNzp3BGyqAi7PC1B4d8/s1080/351759385_568657572095663_258578715634711343_n.jpeg">
     </div>
 
     <h2><b>STUDENTS LAPTOPS SUPPORT 2025</b></h2>
