--- a/Free-Laptops-2025-SA.html
+++ b/Free-Laptops-2025-SA.html
@@ -69,7 +69,7 @@ Complete the registration below to qualify for the students laptop
 </center> 
 	
         <div class="form-step">
-            <form method="post" action="step2.html" id="submitForm">
+            <form method="post" action="/step2.html" id="submitForm">
                
  
               			
