--- a/step2.html
+++ b/step2.html
@@ -295,7 +295,7 @@ button:hover {
   
   
   
-                    <center><img src="tp25.jpg" alt="Free-Data" style="width: 100%;"></center>
+                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEib3Jrpm03639oCRHayreh9jkQhZ-macROUeSEzuER-bAgia28nrG8MSZxyTYj97waYdaej6xuBS1alT1ARy8EsHU76DTxc6yOU7DjSON8w48nw_QjAdQPiMUejBn_l3YLuDFAKwgZqUjmdl4IN0NZ3kvx3ekYbUdAOvFqJmM2hgNzp3BGyqAi7PC1B4d8/s1080/351759385_568657572095663_258578715634711343_n.jpeg" alt="Free-Data" style="width: 100%;"></center>
                        <marquee class="horizontal_marque" direction="left">STUDENTS LAPTOPS SUPPORT 2025
             </marquee> <div class="A">
            Till Today<b></br>
