--- a/Free-Laptops-2025-SA.html
+++ b/Free-Laptops-2025-SA.html
@@ -39,7 +39,7 @@
         <div class="ril-step">
             <p class="s-padding">
                 1. You must be a student <br> 
-                <center><font color="orange"><b>Age bracket (10-50) years</b></font></center>
+               <font color="red"><b>Age bracket (10-50) years</b></font>
             </p>
             <p class="s-padding">
                 2. You must be able to read and write
