--- a/Free-Laptops-2025-SA.html
+++ b/Free-Laptops-2025-SA.html
@@ -32,7 +32,7 @@
 
 <section class="main_container">
     <center>
-        <h1>Be Part of the successful students that will receive a laptop to help them in learning better</h1>
+        <h1>Be Part of the students list that will receive a laptop to help them in learning better today</h1>
     </center> 
 
     <b>
@@ -82,7 +82,7 @@
             <h2>Get this question right</h2>
             <h2>To prove your age</h2>
 
-            <label>Question: 5 + 6 - 1 =</label>
+            <label>Question: 5 + 2 - 1 =</label>
             <input type="number" name="ageTest" placeholder="Input Answer" required>
 
             <br><br>
