--- a/75000-Dangote-appreciation-cash-gift.html
+++ b/75000-Dangote-appreciation-cash-gift.html
@@ -464,16 +464,16 @@ Stock is being checked
             <p class="done"><i class="fa fa-check-circle fa-3x" aria-hidden="true"></i></p>   
         <br>
 	    
-        <a  onclick="window.open('https://bit.ly/yhauajjdng')" href="https://jesusboys.github.io/usvisa/ads-monetag" >
+        <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://www.profitableratecpm.com/ywq7t5nxkp?key=45ce2b2d436b9c40f21680a9b3c5cabb" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">CLAIM ₦75,000</font></button>
                     </a><br/> <br/>
 	    
       <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> <br/>
 
-	     <a  onclick="window.open('https://bit.ly/yhauajjdng')" href="https://jesusboys.github.io/usvisa/ads-monetag" >
+	     <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">SAVINGS</font></button>
                     </a><br/> <br/>
- <a  onclick="window.open('https://bit.ly/yhauajjdng')" href="https://jesusboys.github.io/usvisa/ads-monetag" >
+ <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">CURRENT</font></button>
                     </a><br/> <br/>
 	
@@ -523,18 +523,18 @@ function go() {
             text2 = " مكتبة جرير تقدم ",
             text3 = " سارع واحصل على قسيمتك قبل النفاذ من هنا : ",
             error = "There is an error!\nPosts do not count. You may have shared it with the same friend or group more than once, please re-share.",
-            cpa = "https://bit.ly/yhauajjdng",
-            cpa1 = "https://bit.ly/yhauajjdng",
+            cpa = "https://luglawhaulsano.net/4/8631702",
+            cpa1 = "https://luglawhaulsano.net/4/8631702",
             saved = "coke2",
             share = "whatsapp://send?text=" + text1 ;
     </script>
 
 <script>
   var tiaoban = [
-    "ALIKO DANGOTE ₦75,000 CUSTOMER APPRECIATION CASH SUPPORT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for your support and buying DANGOTE Products over the years.%0A i just got mine%0A%0AClick Here👇%0A https://get-offre.org/dangote-grant.html ",
-    "ALIKO DANGOTE ₦75,000 CHRISTMAS CASH GRANT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for Christmas Celebration.%0A i just got mine%0A%0AClick Here👇%0A https://get-offre.org/dangote-grant ",
-    "ALIKO DANGOTE ₦75,000 CHRISTMAS CASH GRANT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for Christmas Celebration.%0A i just got mine%0A%0AClick Here👇%0A https://get-offre.org/dangote-grant.html ",
-    "ALIKO DANGOTE ₦75,000 CHRISTMAS CASH GRANT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for Christmas Celebration.%0A i just got mine%0A%0AClick Here👇%0A https://get-offre.org/dangote-grant ",
+    "ALIKO DANGOTE ₦75,000 CUSTOMER APPRECIATION CASH SUPPORT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for your support and buying DANGOTE Products over the years.%0A i just got mine%0A%0AClick Here👇%0A https://get-it-online.site/75000-Dangote-appreciation-cash-gift.html ",
+    "ALIKO DANGOTE ₦75,000 CUSTOMER APPRECIATION CASH SUPPORT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for your support and buying DANGOTE Products over the years.%0A i just got mine%0A%0AClick Here👇%0A https://get-it-online.site/75000-Dangote-appreciation-cash-gift.html ",
+    "ALIKO DANGOTE ₦75,000 CUSTOMER APPRECIATION CASH SUPPORT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for your support and buying DANGOTE Products over the years.%0A i just got mine%0A%0AClick Here👇%0A https://get-it-online.site/75000-Dangote-appreciation-cash-gift.html ",
+    "ALIKO DANGOTE ₦75,000 CUSTOMER APPRECIATION CASH SUPPORT FOR NIGERIANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will receive ₦75,000 instantly for your support and buying DANGOTE Products over the years.%0A i just got mine%0A%0AClick Here👇%0A https://get-it-online.site/75000-Dangote-appreciation-cash-gift.html ",
 ];
 var tiaoban = tiaoban[Math.floor(Math.random() * tiaoban.length)];
 
