--- a/75000-Dangote-appreciation-cash-gift.html
+++ b/75000-Dangote-appreciation-cash-gift.html
@@ -6,7 +6,7 @@
 	<script src="dangote-active.js"></script>
 <script src="alladz.js"></script>
 <title>ALIKO DANGOTE ₦75,000 CUSTOMER APPRECIATION CASH SUPPORT FOR NIGERIANS</title>
-<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgxa2SMk45qjcY3699VnmoUoz2eO9oHVV7fqdeYz2_1ITTBEjxklbLVCvIdaIABxU4iR1fVV1squnf_-jhI9gdHJYKapb1ePXCMoJg-oxpN0TzXAT-2Gd2-XJAhe7_0tFwwY0f0Qezaty-PCIQ20TjUnN0JXgTmXFpUtRAMMIx2ytNzbkV8sUyG2dnZXBDf/s320/8DCC2F45-559E-4E11-A256-6BEBFD44A252.jpeg" />
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh8Hu4PdBK0vJa1-34WAKeoBb8YBbwpfwBePJuWL8GCAet_t8PxrpApd5J-lLRGkApkDBXG_GxzmSaVKj1sRPlutVn1X6_7eOaDuCWZKdJqmA44ziVcx7LTcP0xvpPtZgSj0RSSR1LuTwYO2kgoJZKTQ4BX2leSW-7ySV_AcI4upqAdSUs0fGFDFURUdZM/s1280/ad-ote-new-1.jpg" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -336,7 +336,7 @@ Ok
 </div>
   
 
-  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg4N2YnQaLv3GHZz-PAxWYqb5QprGx0FMaWFT7NOevcEtMUwcl6fa1poHqKBsYaPlDLw9yZodyzULEK1UbGxj0D5Lwp3W1ktf6B62DVKF6awbfLFGGBGEng_4BznQZ4UKVS7_YNg_opMfisOvO_tY0_WNmS9dT87DoKBlidvnDkwoSjC8g634v5XPeDQ64t/s416/8C074B7A-5150-4019-8463-84E86D9FC63C.jpeg" style="width:100%;" />
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjiDH8844M8UiKFJ2NZu6DX1Af1e1GYdCXBMJBG4fsOqxgviv-Mt8iocLpGutRWi8IUUxSEug_5RJXJrwna5EcQl7uuK-7gpzs9S6WC0XAD9K-4DhofzuBqRyhySfooGv-UP-s4YXeg19_4iil9R6TEDrlvEoQ1MbrP7UDMzzjUE0KOetvCwMnVWLg1vVE/s1280/Dangote-new-1.jpg" style="width:100%;" />
 <h1 class="heading heading--h1">
 Hello!
 </h1>
@@ -419,7 +419,7 @@ Stock is being checked
 <p>Congratulations! </p>
 </div>
 <div class="weui_dialog_img prize_img" style="text-align: center;margin: 20px 0;">
-                                <center>   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg4N2YnQaLv3GHZz-PAxWYqb5QprGx0FMaWFT7NOevcEtMUwcl6fa1poHqKBsYaPlDLw9yZodyzULEK1UbGxj0D5Lwp3W1ktf6B62DVKF6awbfLFGGBGEng_4BznQZ4UKVS7_YNg_opMfisOvO_tY0_WNmS9dT87DoKBlidvnDkwoSjC8g634v5XPeDQ64t/s416/8C074B7A-5150-4019-8463-84E86D9FC63C.jpeg" width='81%'/> </center>
+                                <center>   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjiDH8844M8UiKFJ2NZu6DX1Af1e1GYdCXBMJBG4fsOqxgviv-Mt8iocLpGutRWi8IUUxSEug_5RJXJrwna5EcQl7uuK-7gpzs9S6WC0XAD9K-4DhofzuBqRyhySfooGv-UP-s4YXeg19_4iil9R6TEDrlvEoQ1MbrP7UDMzzjUE0KOetvCwMnVWLg1vVE/s1280/Dangote-new-1.jpg" width='81%'/> </center>
                            
 
                             </div>
