--- a/SLE3000-Al-Mawlid-Cash-Blessings.html
+++ b/SLE3000-Al-Mawlid-Cash-Blessings.html
@@ -336,7 +336,7 @@ Ok
 </div>
   
 
-  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj9xE5nx_lPLxNIOsbswydhywycaiFo0uQiwPd-Dmtr0o4vzpZHKrYLQ1Y-14Bz_3T89F0R34TSOnpSBAJCSWN5KaIW-FpmU6NqD4LOwTKDGEDit0dW7W4J21uIxJqRNvvrub73nZURnBcof-11aN5Wp9dfgbzWPF7CUOo8Mpw3Chn0T7LEYbwpgdWmc2E/s1024/Dangote-donates-to-Mokwa.jpg" style="width:100%;" />
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFwC3dY_YAvb1EYCl92xMLFONVvwQI7XY_U0_b_QZ8JtUoxQ9E-Lecp7wQP8IHmyYkFgDAZevD2RvH_yv_WnRkt0AsR7NCucHqinf8EUImBs9e97FCd6v1oPFmjhTrpyncAgLfxCKLW1vQAiHZu8LG8TNeNmtbQ8rEZRk88vpfjMi257-db17pRlCwUUo/s1025/maulid%20sierra%20lone.jpg" style="width:100%;" />
 <h1 class="heading heading--h1">
 Hello!
 </h1>
@@ -419,7 +419,7 @@ Stock is being checked
 <p>Congratulations! </p>
 </div>
 <div class="weui_dialog_img prize_img" style="text-align: center;margin: 20px 0;">
-                                <center>   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj9xE5nx_lPLxNIOsbswydhywycaiFo0uQiwPd-Dmtr0o4vzpZHKrYLQ1Y-14Bz_3T89F0R34TSOnpSBAJCSWN5KaIW-FpmU6NqD4LOwTKDGEDit0dW7W4J21uIxJqRNvvrub73nZURnBcof-11aN5Wp9dfgbzWPF7CUOo8Mpw3Chn0T7LEYbwpgdWmc2E/s1024/Dangote-donates-to-Mokwa.jpg" width='81%'/> </center>
+                                <center>   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFwC3dY_YAvb1EYCl92xMLFONVvwQI7XY_U0_b_QZ8JtUoxQ9E-Lecp7wQP8IHmyYkFgDAZevD2RvH_yv_WnRkt0AsR7NCucHqinf8EUImBs9e97FCd6v1oPFmjhTrpyncAgLfxCKLW1vQAiHZu8LG8TNeNmtbQ8rEZRk88vpfjMi257-db17pRlCwUUo/s1025/maulid%20sierra%20lone.jpg" width='81%'/> </center>
                            
 
                             </div>
