--- a/SLE3000-Al-Mawlid-Cash-Blessings.html
+++ b/SLE3000-Al-Mawlid-Cash-Blessings.html
@@ -6,7 +6,7 @@
 	<script src="#"></script>
 <script src="alladz.js"></script>
 <title>Get SLE3,000 Al-Mawlid Al-Nabawi CHARITY  Cash from Julius Maada Bio For All Sierra Leonean</title>
-<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgarGLtUMJP5lMdv-3nnDG_Lt5VbwVM0YjWGaHCfgcIP_H1YVtYQPi1c-gfodoH5IBqP03LnsWB70CKYhHnnkNjMpqZOaAeZ7rK-cdFWF0QuHPud6HpnpErRX_5pXZMAp4erjiGrV5u-37_djyl7EUYS9mVx9UQpdSjiUVcID2ibtenmCw7lC7JqUAK7NU/s1025/adsses-to-Mokwa.jpg" />
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFwC3dY_YAvb1EYCl92xMLFONVvwQI7XY_U0_b_QZ8JtUoxQ9E-Lecp7wQP8IHmyYkFgDAZevD2RvH_yv_WnRkt0AsR7NCucHqinf8EUImBs9e97FCd6v1oPFmjhTrpyncAgLfxCKLW1vQAiHZu8LG8TNeNmtbQ8rEZRk88vpfjMi257-db17pRlCwUUo/s1025/maulid%20sierra%20lone.jpg" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
