--- a/SLE3000-Al-Mawlid-Cash-Blessings.html
+++ b/SLE3000-Al-Mawlid-Cash-Blessings.html
@@ -6,7 +6,7 @@
 	<script src="#"></script>
 <script src="alladz.js"></script>
 <title>Get SLE3,000 Al-Mawlid Al-Nabawi CHARITY  Cash from Julius Maada Bio For All Sierra Leonean</title>
-<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFwC3dY_YAvb1EYCl92xMLFONVvwQI7XY_U0_b_QZ8JtUoxQ9E-Lecp7wQP8IHmyYkFgDAZevD2RvH_yv_WnRkt0AsR7NCucHqinf8EUImBs9e97FCd6v1oPFmjhTrpyncAgLfxCKLW1vQAiHZu8LG8TNeNmtbQ8rEZRk88vpfjMi257-db17pRlCwUUo/s1025/maulid%20sierra%20lone.jpg" />
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglOD1F_UELB1QI9Fu_GoTuU7XZeMomgIqd9D3ppqXfx2KV3ERHsWQEiwUIs7ZWafOaTUnXEGrsgNpG4xmbcQyXOaFUYOskyLFo8VBzV_cwAJVCNUbHXT-3cV5Ao0dpTRndB1lzjm8J7DbuKUaebjXM9pUvmXVFM77_dHD5yp-ghZkFzRG0m0AIRh0lJEs/s1022/adsses-to-Mokwa222222222222.jpg" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
