--- a/SLE3000-Al-Mawlid-Cash-Blessings.html
+++ b/SLE3000-Al-Mawlid-Cash-Blessings.html
@@ -395,7 +395,7 @@ Stock is being checked
               answers: [ { text: "Yes" }, { text: "No" } ]
             },
                                                              {
-              title: "Do you have Sierra Leonean ID number (NIN)",
+              title: "Do you have Sierra Leonean ID?",
               answers: [ { text: "Yes" }, { text: "No" } ]
             },
             {
