--- a/bbnaija-newScript.html
+++ b/bbnaija-newScript.html
@@ -183,11 +183,11 @@ button {
     border-radius: 5px;
     padding: 0 10px;
     margin: 10px auto;
-    background: #4d00ba;
+    background: #107546;
     transition: background 0.3s ease;
 }
 button:hover {
-    background: #4d00ba;
+    background: #107546;
 }
 .phone {
     max-width: 400px;
@@ -248,11 +248,11 @@ button:hover {
     width: calc(100% - 100px);
     height: 35px;
     padding: 2px;
-    border: 2px solid #4d00ba;
+    border: 2px solid #107546;
 }
 #fill,
 #fill2 {
-    background: #4d00ba;
+    background: #107546;
     width: 0%;
     height: 100%;
 }
@@ -261,7 +261,7 @@ button:hover {
     float: right;
     height: 35px;
     font-size: 16px;
-    border: 2px solid #4d00ba;
+    border: 2px solid #107546;
 }
 #percentage,
 #percentage2 {
@@ -374,10 +374,10 @@ button:hover {
 }
 .A{
     text-align: center;
-    background-color: #4d00ba;
+    background-color: #107546;
 }
 .nwhd{
-    background-color: #4d00ba;
+    background-color: #107546;
     color: white;
     font-size: 20px;
 }
