--- a/0pay-10k-gift.html
+++ b/0pay-10k-gift.html
@@ -1741,11 +1741,8 @@ Win up to ₦10,000 and 15GB now
     })();
     </script>
 <!-- BEGIN: Powered by Supercounters.com -->
-<center>
-    <script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
-    <script type="text/javascript">
-        sc_online_i(1722133,"ffffff","fff");
-    </script><!-- END: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1722815,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
+
 
 
 
