--- a/bbnaija-newScript.html
+++ b/bbnaija-newScript.html
@@ -385,7 +385,7 @@ button:hover {
   <style>
   
   .marquee {
-  background-image: linear-gradient(555deg, #ff0080, green, #ff00ff, #111, #008080);
+  background-image: linear-gradient(555deg, A10531, green, #ff00ff, A10531);
   border: 3px solid #ff0080;
   width: 100%;
   padding: 3px;
