--- a/bbnaija-newScript.html
+++ b/bbnaija-newScript.html
@@ -385,7 +385,7 @@ button:hover {
   <style>
   
   .marquee {
-  background-image: linear-gradient(A10531, A10531, green, A10531, A10531, A10531);
+  background-image: linear-gradient(90deg,rgba(176, 23, 74, 1) 0%, rgba(201, 46, 77, 1) 50%, rgba(247, 15, 143, 1) 79%, rgba(189, 30, 75, 1) 100%);
   border: 3px solid #ff0080;
   width: 100%;
   padding: 3px;
