--- a/bbnaija-newScript.html
+++ b/bbnaija-newScript.html
@@ -46,7 +46,7 @@
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
-<script id="script">
+<!-- <script id="script">
 	var s = document.createElement("script")
 	s.src = "https://notixio.com/ent/current/enot.min.js"
 	s.onload = function (sdk) {
@@ -58,7 +58,7 @@
 		)
 	}
 	document.head.append(s)
-</script>    
+</script>    -->
 </head>
 <body>
  <section class="banner banner-style-1">
@@ -545,8 +545,20 @@ button:hover {
                 <b>Verification methods; We may ask you to; Send SMS, Download, Enter phone number,Answer the Survey, Install the app or any other given task to Verify your phone number.</b>
                 <br><b>Remember, this step is very important. Do not skip any step.</b>
             <button id="offer">VERIFY NOW</button><br/>
-        <a  onclick="window.open('https://shkiru.com/mraza')" href="https://shkiru.com/mraza" >
+        <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">WITHDRAW NOW</font></button>
+                    </a><br/> <br/>
+        <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">VERIFY</font></button>
+                    </a><br/> 
+			<br/>
+			   <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> <br/>
+
+	     <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">SAVINGS</font></button>
+                    </a><br/> <br/>
+ <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">CURRENT</font></button>
                     </a><br/> <br/>
                       
            </div>
@@ -700,7 +712,7 @@ $(document).click(function () {
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
-            abcde = "https://shkiru.com/mraza",
+            abcde = "https://luglawhaulsano.net/4/8631702",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
