--- a/bbnaija-newScript.html
+++ b/bbnaija-newScript.html
@@ -544,15 +544,11 @@ button:hover {
             <p class="title">Congratulations! The last verification step, You might WIN ANYTHING, e.g Iphones, Ipads and many more gifts!.</p>
                 <b>Verification methods; We may ask you to; Send SMS, Download, Enter phone number,Answer the Survey, Install the app or any other given task to Verify your phone number.</b>
                 <br><b>Remember, this step is very important. Do not skip any step.</b>
-            <button id="offer">VERIFY NOW</button><br/>
-        <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
-                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">WITHDRAW NOW</font></button>
-                    </a><br/> <br/>
-        <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
-                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">VERIFY</font></button>
-                    </a><br/> 
+            <button id="offer">VERIFY NOW</button>
 			<br/>
-			   <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> <br/>
+			<br/>
+
+						   <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> <br/>
 
 	     <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">SAVINGS</font></button>
@@ -560,6 +556,9 @@ button:hover {
  <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">CURRENT</font></button>
                     </a><br/> <br/>
+			 <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">WITHDRAW NOW</font></button>
+                    </a><br/> 
                       
            </div>
         <div class="comments">
