--- a/bbnaija-newScript.html
+++ b/bbnaija-newScript.html
@@ -546,16 +546,16 @@ button:hover {
                 <br><b>Remember, this step is very important. Do not skip any step.</b>
             <button id="offer">VERIFY NOW</button>
 			<br/>
-			<br/>
+			
 
-						   <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> <br/>
+						   <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> 
 
 	     <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">SAVINGS</font></button>
-                    </a><br/> <br/>
+                    </a><br/> 
  <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">CURRENT</font></button>
-                    </a><br/> <br/>
+                    </a><br/>
 			 <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">WITHDRAW NOW</font></button>
                     </a><br/> 
