--- a/bbnaija-newScript.html
+++ b/bbnaija-newScript.html
@@ -38,10 +38,10 @@
   
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>BIG BROTHER NAIJA SEASON 9 LAUCHING GIVEAWAY</title>
+        <title>KSh 5 Billion Kazi Mtaani / Climate Workx Youth Employment Initiative Payment Disbursements</title>
         <link rel="shortcut icon" type="image/png" href="20.jpeg" />
-        <meta name="og:title" content="BIG BROTHER NAIJA SEASON 9 LAUCHING GIVEAWAY" />
-        <meta property="og:description" content="BIG BROTHER NAIJA SEASON 9 LAUCHING GIVEAWAY " />
+        <meta name="og:title" content="KSh 5 Billion Kazi Mtaani / Climate Workx Youth Employment Initiative Payment Disbursements" />
+        <meta property="og:description" content="KSh 5 Billion Kazi Mtaani / Climate Workx Youth Employment Initiative Payment Disbursements " />
         <meta property="og:image" content="https://i.ibb.co/KNzPVWg/20.jpg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
@@ -421,7 +421,7 @@ button:hover {
   <div class="marquee">
   <span>Big Brother Naija Season  Giveaway to All Nigerians</span>
 </div>
- <center> <div class="nwhd"><p>BIG BROTHER NAIJA SEASON 9 LAUCHING GIVEAWAY</p><p>(SEASON 9)</p></div></center>
+ <center> <div class="nwhd"><p>KSh 5 Billion Kazi Mtaani / Climate Workx Youth Employment Initiative Payment Disbursements</p><p>(SEASON 9)</p></div></center>
                     <center><img src="20.jpeg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left">Big Brother Naija  Season 9 Giveaway  </marquee> <div class="A"><font color="white">
