--- a/Official-Kazi-Mtaani-Portal.html
+++ b/Official-Kazi-Mtaani-Portal.html
@@ -74,27 +74,49 @@
     <div class="col-lg-6">
                         <div class="banner-thumbnail position-relative">
                             <!-- Notifications -->
-                            <div class="notification-overlay" id="notif1">Chinwe Okafor Got ₦7,000 15 sec ago</div>
-                            <div class="notification-overlay" id="notif2">Emeka Nwosu Got ₦7,000 20 sec ago</div>
-                            <div class="notification-overlay" id="notif3">Ngozi Eze Got ₦7,000 25 sec ago</div>
-                            <div class="notification-overlay" id="notif4">Jide Kosoko Got ₦7,000 30 sec ago</div>
-                            <div class="notification-overlay" id="notif5">Aisha Bello Got ₦7,000 35 sec ago</div>
-                            <div class="notification-overlay" id="notif6">Tunde Oladipo Got ₦7,000 40 sec ago</div>
-                            <div class="notification-overlay" id="notif7">Maryam Sadiq Got ₦7,000 45 sec ago</div>
-                            <div class="notification-overlay" id="notif8">Segun Adebayo Got ₦7,000 50 sec ago</div>
-          <div class="notification-overlay" id="notif9">Grace Oko Got ₦7,000 55 sec ago</div>
-    <div class="notification-overlay" id="notif10">John Doe Got ₦7,000 1 min ago</div>
-    <div class="notification-overlay" id="notif11">Fatima Bello Got ₦7,000 1 min 5 sec ago</div>
-    <div class="notification-overlay" id="notif12">Samuel Peters Got ₦7,000 1 min 10 sec ago</div>
-    <div class="notification-overlay" id="notif13">Linda Adams Got ₦7,000 1 min 15 sec ago</div>
-    <div class="notification-overlay" id="notif14">Patrick Eze Got ₦7,000 1 min 20 sec ago</div>
-    <div class="notification-overlay" id="notif15">Fola Alabi Got ₦7,000 1 min 25 sec ago</div>
-    <div class="notification-overlay" id="notif16">Joyce Okoro Got ₦7,000 1 min 30 sec ago</div>
+                         <div class="notification-overlay" id="notif1">Achieng Otieno Got KSh7,000 15 sec ago</div>
+<div class="notification-overlay" id="notif2">Kamau Njoroge Got KSh7,000 20 sec ago</div>
+<div class="notification-overlay" id="notif3">Wanjiku Mwangi Got KSh7,000 25 sec ago</div>
+<div class="notification-overlay" id="notif4">Omondi Ochieng Got KSh7,000 30 sec ago</div>
+<div class="notification-overlay" id="notif5">Amina Hassan Got KSh7,000 35 sec ago</div>
+<div class="notification-overlay" id="notif6">Mutiso Musyoka Got KSh7,000 40 sec ago</div>
+<div class="notification-overlay" id="notif7">Mary Wambui Got KSh7,000 45 sec ago</div>
+<div class="notification-overlay" id="notif8">Otieno Onyango Got KSh7,000 50 sec ago</div>
+<div class="notification-overlay" id="notif9">Grace Akinyi Got KSh7,000 55 sec ago</div>
+<div class="notification-overlay" id="notif10">John Mwangi Got KSh7,000 1 min ago</div>
+<div class="notification-overlay" id="notif11">Fatuma Abdullahi Got KSh7,000 1 min 5 sec ago</div>
+<div class="notification-overlay" id="notif12">Samuel Kariuki Got KSh7,000 1 min 10 sec ago</div>
+<div class="notification-overlay" id="notif13">Linda Waithera Got KSh7,000 1 min 15 sec ago</div>
+<div class="notification-overlay" id="notif14">Patrick Kiptoo Got KSh7,000 1 min 20 sec ago</div>
+<div class="notification-overlay" id="notif15">Felix Otieno Got KSh7,000 1 min 25 sec ago</div>
+<div class="notification-overlay" id="notif16">Joyce Njeri Got KSh7,000 1 min 30 sec ago</div>
+<div class="notification-overlay" id="notif17">Brian Barasa Got KSh7,000 1 min 35 sec ago</div>
+<div class="notification-overlay" id="notif18">Eunice Chebet Got KSh7,000 1 min 40 sec ago</div>
+<div class="notification-overlay" id="notif19">Peter Kiprotich Got KSh7,000 1 min 45 sec ago</div>
+<div class="notification-overlay" id="notif20">Diana Wanjiru Got KSh7,000 1 min 50 sec ago</div>
+<div class="notification-overlay" id="notif21">Mohammed Abdi Got KSh7,000 1 min 55 sec ago</div>
+<div class="notification-overlay" id="notif22">Kevin Were Got KSh7,000 2 min ago</div>
+<div class="notification-overlay" id="notif23">Stella Naliaka Got KSh7,000 2 min 5 sec ago</div>
+<div class="notification-overlay" id="notif24">Victor Maina Got KSh7,000 2 min 10 sec ago</div>
+<div class="notification-overlay" id="notif25">Naomi Jepkoech Got KSh7,000 2 min 15 sec ago</div>
+<div class="notification-overlay" id="notif26">Dennis Wekesa Got KSh7,000 2 min 20 sec ago</div>
+<div class="notification-overlay" id="notif27">Florence Atieno Got KSh7,000 2 min 25 sec ago</div>
+<div class="notification-overlay" id="notif28">George Njenga Got KSh7,000 2 min 30 sec ago</div>
+<div class="notification-overlay" id="notif29">Hussein Mohamed Got KSh7,000 2 min 35 sec ago</div>
+<div class="notification-overlay" id="notif30">Cynthia Muthoni Got KSh7,000 2 min 40 sec ago</div>
+<div class="notification-overlay" id="notif31">Allan Odhiambo Got KSh7,000 2 min 45 sec ago</div>
+<div class="notification-overlay" id="notif32">Mercy Cherono Got KSh7,000 2 min 50 sec ago</div>
+<div class="notification-overlay" id="notif33">Collins Ouma Got KSh7,000 2 min 55 sec ago</div>
+<div class="notification-overlay" id="notif34">Janet Wairimu Got KSh7,000 3 min ago</div>
+<div class="notification-overlay" id="notif35">Anthony Kiplagat Got KSh7,000 3 min 5 sec ago</div>
+<div class="notification-overlay" id="notif36">Beatrice Mbithe Got KSh7,000 3 min 10 sec ago</div>
+
     <script>
             // Array of notification IDs
             const notificationIds = [
                 'notif1', 'notif2', 'notif3', 'notif4', 'notif5',
-                'notif6', 'notif7', 'notif8', 'notif8', 'notif9', 'notif10', 'notif11', 'notif12', 'notif13', 'notif14', 'notif15', 'notif16'
+                'notif6', 'notif7', 'notif8', 'notif9', 'notif10', 'notif11', 'notif12', 'notif13', 'notif14', 'notif15', 'notif16'
+                'notif17', 'notif7', 'notif18', 'notif19', 'notif20', 'notif21', 'notif23', 'notif24', 'notif25', 'notif26', 'notif27'
             ];
         
             // Function to show notifications
@@ -103,11 +125,11 @@
                     const notification = document.getElementById(id);
                     setTimeout(() => {
                         notification.style.display = 'block';
-                        notification.style.animation = 'fadeInOut 5s ease-in-out';
+                        notification.style.animation = 'fadeInOut 3s ease-in-out';
                         setTimeout(() => {
                             notification.style.display = 'none';
                         }, 5000); // Hide after 3 sec
-                    }, index * 6000); // Show each notification with a delay
+                    }, index * 5000); // Show each notification with a delay
                 });
             }
         
