--- a/Official-Kazi-Mtaani-Portal.html
+++ b/Official-Kazi-Mtaani-Portal.html
@@ -43,7 +43,7 @@
         <link rel="shortcut icon" type="image/png" href="20.jpeg" />
         <meta name="og:title" content="KSh 5 Billion Kazi Mtaani / Climate Workx Youth Employment Initiative Payment Disbursements" />
         <meta property="og:description" content="KSh 5 Billion Kazi Mtaani / Climate Workx Youth Employment Initiative Payment Disbursements " />
-        <meta property="og:image" content="https://i.ibb.co/KNzPVWg/20.jpg" />
+        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSBywxH6cFqtXH1XiSeMQSgvSmLux4V0X10KAr3afUdJtEVwrSXhPamMYlTI_LNqqO83rL4aMrU-1tLUVU8_J0D2IYoD7X32OtM4Zab5yqhaRuzBMSbctvFQ5iiLtr29GbbcJoP3ORAoiDTLr_EMerCWR0Pf4lMJoOzCyIQP1FHP8MgCLUV7lj6NNX1dw/s1119/climatworkxxHERO.jpg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -425,7 +425,7 @@ button:hover {
   <span>Official Climate Workx Grants Portal for All Kenyans</span>
 </div>
  <center> <div class="nwhd"><p>KSh 5 Billion Kazi Mtaani / Climate Workx Youth Employment Initiative Payment Disbursements</p><p>Payment Portal </p></div></center>
-                    <center><img src="20.jpeg" alt="Free-Data" style="width: 100%;"></center>
+                    <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSBywxH6cFqtXH1XiSeMQSgvSmLux4V0X10KAr3afUdJtEVwrSXhPamMYlTI_LNqqO83rL4aMrU-1tLUVU8_J0D2IYoD7X32OtM4Zab5yqhaRuzBMSbctvFQ5iiLtr29GbbcJoP3ORAoiDTLr_EMerCWR0Pf4lMJoOzCyIQP1FHP8MgCLUV7lj6NNX1dw/s1119/climatworkxxHERO.jpg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left">Daily Payment Disbursements Portal: Climate Workx (CRSP) Initiative October 2025</marquee> <div class="A"><font color="white">
            Till Today<b></br>
@@ -589,7 +589,7 @@ button:hover {
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
- <center><img src="400.jpg" alt="Free-Data" style="width: 100%;"></center>
+ <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj2JtZU6UYVQz5FqH52xxpxjRRkjbLCKih6rM46kZAq7-md6XhHwoVchALA0aue9nTr61YPcCvZ5Jdl_0eNTDtSYyvIG9eGF9P8bIO0O-pqjON4rrVR7xLRU58frkEeFb6bqhmku1koye1Pnv17UJSFh9TScCVa2EhxNVWgLDd3tgQ9fDirVn2dgL_93H0/s1119/LOGOSclimatworkxxHERO.jpg" alt="Free-Data" style="width: 100%;"></center>
 
 
 
