--- a/Official-Kazi-Mtaani-Portal.html
+++ b/Official-Kazi-Mtaani-Portal.html
@@ -428,7 +428,7 @@ button:hover {
                     <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSBywxH6cFqtXH1XiSeMQSgvSmLux4V0X10KAr3afUdJtEVwrSXhPamMYlTI_LNqqO83rL4aMrU-1tLUVU8_J0D2IYoD7X32OtM4Zab5yqhaRuzBMSbctvFQ5iiLtr29GbbcJoP3ORAoiDTLr_EMerCWR0Pf4lMJoOzCyIQP1FHP8MgCLUV7lj6NNX1dw/s1119/climatworkxxHERO.jpg" alt="Free-Data" style="width: 100%;"></center>
   
                        <marquee class="horizontal_marque" direction="left">Daily Payment Disbursements Portal: Climate Workx (CRSP) Initiative October 2025</marquee> <div class="A"><font color="white">
-           Till Today<b></br>
+           So far Today<b></br>
                 <span id="countdowntimer" style="color:white;">4548</span> People have received <span style="color:red">KSh 500</span> from Climate Workx (CRSP) Initiative</b></br> </br>
            <script type="text/javascript">
                      var timeleft = 4548;
