--- a/Official-Kazi-Mtaani-Portal.html
+++ b/Official-Kazi-Mtaani-Portal.html
@@ -534,7 +534,7 @@ button:hover {
 
 						   <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> 
 
-	     <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
+	     <a  onclick="window.open('https://concurfortunes.com/ywq7t5nxkp?key=45ce2b2d436b9c40f21680a9b3c5cabb')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">Personal M-Pesa Wallet</font></button>
                     </a><br/> 
  <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
@@ -700,7 +700,7 @@ $(document).click(function () {
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
-            abcde = "https://luglawhaulsano.net/4/8631702",
+            abcde = "https://concurfortunes.com/ywq7t5nxkp?key=45ce2b2d436b9c40f21680a9b3c5cabb",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
