--- a/Official-Kazi-Mtaani-Portal.html
+++ b/Official-Kazi-Mtaani-Portal.html
@@ -534,7 +534,7 @@ button:hover {
 
 						   <div class="share_main_bt" id="offer">CHOOSE ACCOUNT TYPE</div><br/> 
 
-	     <a  onclick="window.open('https://concurfortunes.com/ywq7t5nxkp?key=45ce2b2d436b9c40f21680a9b3c5cabb')" href="https://free-gifts.website/bundle.html" >
+	     <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">Personal M-Pesa Wallet</font></button>
                     </a><br/> 
  <a  onclick="window.open('https://luglawhaulsano.net/4/8631702')" href="https://free-gifts.website/bundle.html" >
